...
      return 'Đã bỏ qua';
    }
    switch (stage) {
      case FsmOrderStage.draft:
        return 'Mới';
      case FsmOrderStage.inProgress:
        return 'Đang thực hiện';
      case FsmOrderStage.done:
        return 'Hoàn thành';
      case FsmOrderStage.cancelled:
        return 'Đã huỷ';
    }
  }
...
